--- a/Assignment-2.html
+++ b/Assignment-2.html
@@ -1,161 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
     <style>
-        *{
+        * {
             background-color: pink;
             font-size: 20px;
         }
     </style>
 </head>
+
 <body>
     <details>
-    <summary>What are the benefits of using CSS?</summary>
-    <p>&rarr;(1) Faster Page Speed.<br>
-        (2) Better User Experience. CSS not only makes web pages easy on the eye, it also allows for user-friendly formatting.<br>
-        (3) Quicker Development Time.<br>
-        (4) Easy Formatting Changes.<br>
-        (5) Compatibility Across Devices.</p>
-</details>
-<br>
-<details>
-    <summary>What are the disadvantages of CSS?</summary>
-    <p>&rarr;(1)Cross-Browser Issues.<br>
-        (2)Confusion Due to Its Many Levels.<br>
-        (3)Confusion Due to Its Many Levels.<br>
-        (4)Different Layout Display.<br>
-        (5)Vulnerability.
-    </p>
-</details>
-<br>
-<details>
-    <summary>What is the difference between CSS2 and CSS3?</summary>
-    <p>&rarr;CSS3 has compatibility with external font styles through google fonts and typecast. It was not possible with earlier CSS1 and CSS2.<br>
-        The selectors in CSS3 has increased while CSS1 and CSS2 only had simple selectors.<br>
-        CSS1 AND CSS2 didn’t have provision to specifically design the web layout.</p>
-</details>
-<br>
-<details>
-    <summary>Name a few CSS style components</summary>
-    <p>&rarr;Selector: class name, id name or element name that is target<br>
-        Attribute: name of the attribute you want to style for example border, color,background, position etc.<br>
-        Value of Property: value that will be assigned to attribute.</p>
-</details>
-<br>
-<details>
-    <summary>What do you understand by CSS opacity?</summary>
-    <p>&rarr;he opacity CSS property sets the opacity of an element. Opacity is the degree to which content behind an element is hidden, and is the opposite of transparency.</p>
-</details>
-<br>
-<details>
-    <summary>How can the background color of an element be changed?</summary>
-    <p>&rarr;To add background color in HTML, use the CSS background-color property. Set it to the color name or code you want and place it inside a style attribute. Then add this style attribute to an HTML element, like a table, heading, div, or span tag.</p>
-</details>
-<br>
-<details>
-    <summary>How can image repetition of the backup be controlled?</summary>
-    <p>&rarr;This task can be achieved by using the background-repeat property that will help us to control the repetition of the image. The background-repeat property in CSS is used to repeat the background image both horizontally and vertically. It also decides whether the background image will be repeated or not.</p>
-</details>
-<br>
-<details>
-    <summary>what is the use of the background-position property?</summary>
-<p>&rarr;The background-position property sets the starting position of a background image. Tip: By default, a background-image is placed at the top-left corner of an element, and repeated both vertically and horizontally.</p>
-</details>
-<br>
-<details>
-    <summary>Which property controls the image scroll in the background?</summary>
-    <p>&rarr;The background-attachment property sets whether a background image scrolls with the rest of the page, or is fixed.</p>
-</details>
-<br>
-<details>
-    <summary>Why should background and color be used as separate properties?</summary>
-    <p>&rarr;There are two reasons behind this: It enhances the legibility of style sheets. The background property is a complex property in CSS, and if it is combined with color, the complexity will further increase.</p>
-</details>
-<br>
-<details>
-    <summary>How to center block elements using CSS1?</summary>
-    <p>&rarr;o centrally align the block elements, we can simply make use of the <center> tag. All the elements within the <center> tag will be centrally aligned.</p>
-</details>
-<br>
-<details>
-    <summary>How to maintain the CSS specifications?</summary>
-    <p>&rarr;The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME type) text/css is registered for use with CSS by RFC 2318 (March 1998).</p>
-</details>
-<br>
-<details>
-    <summary>What are the ways to integrate CSS as a web page?</summary>
-    <p>&rarr;CSS may be added to HTML in three different ways. To style a single HTML element on the page, use Inline CSS in a style attribute. By adding CSS to the head section of our HTML document, we can embed an internal stylesheet. We can also connect to an external stylesheet that separates our CSS from our HTML.</p>
-</details>
-<br>
-<details>
-    <summary>What is embedded style sheets?</summary>
-    <p>&rarr;Embedded Stylesheet: It allows you to define styles for a particular HTML document as a whole in one place. This is done by embedding the <style></style> tags containing the CSS properties in the head of your document.</p>
-</details>
-<br>
-<details>
-    <summary>What are the external style sheets?</summary>
-    <p>&rarr;An external style sheet is a separate CSS file that can be accessed by creating a link within the head section of the webpage. Multiple webpages can use the same link to access the stylesheet. The link to an external style sheet is placed within the head section of the page.</p>
-</details>
-<br>
-<details>
-    <summary>What are the advantages and disadvantages of using external style sheets?</summary>
-    <p>&rarr;The advantages of External Style Sheets are as follows :
+        <summary>What are the benefits of using CSS?</summary>
+        <p>&rarr;(1) Faster Page Speed.<br>
+            (2) Better User Experience. CSS not only makes web pages easy on the eye, it also allows for user-friendly
+            formatting.<br>
+            (3) Quicker Development Time.<br>
+            (4) Easy Formatting Changes.<br>
+            (5) Compatibility Across Devices.</p>
+    </details>
+    <br>
+    <details>
+        <summary>What are the disadvantages of CSS?</summary>
+        <p>&rarr;(1)Cross-Browser Issues.<br>
+            (2)Confusion Due to Its Many Levels.<br>
+            (3)Confusion Due to Its Many Levels.<br>
+            (4)Different Layout Display.<br>
+            (5)Vulnerability.
+        </p>
+    </details>
+    <br>
+    <details>
+        <summary>What is the difference between CSS2 and CSS3?</summary>
+        <p>&rarr;CSS3 has compatibility with external font styles through google fonts and typecast. It was not possible
+            with earlier CSS1 and CSS2.<br>
+            The selectors in CSS3 has increased while CSS1 and CSS2 only had simple selectors.<br>
+            CSS1 AND CSS2 didn’t have provision to specifically design the web layout.</p>
+    </details>
+    <br>
+    <details>
+        <summary>Name a few CSS style components</summary>
+        <p>&rarr;Selector: class name, id name or element name that is target<br>
+            Attribute: name of the attribute you want to style for example border, color,background, position etc.<br>
+            Value of Property: value that will be assigned to attribute.</p>
+    </details>
+    <br>
+    <details>
+        <summary>What do you understand by CSS opacity?</summary>
+        <p>&rarr;he opacity CSS property sets the opacity of an element. Opacity is the degree to which content behind
+            an element is hidden, and is the opposite of transparency.</p>
+    </details>
+    <br>
+    <details>
+        <summary>How can the background color of an element be changed?</summary>
+        <p>&rarr;To add background color in HTML, use the CSS background-color property. Set it to the color name or
+            code you want and place it inside a style attribute. Then add this style attribute to an HTML element, like
+            a table, heading, div, or span tag.</p>
+    </details>
+    <br>
+    <details>
+        <summary>How can image repetition of the backup be controlled?</summary>
+        <p>&rarr;This task can be achieved by using the background-repeat property that will help us to control the
+            repetition of the image. The background-repeat property in CSS is used to repeat the background image both
+            horizontally and vertically. It also decides whether the background image will be repeated or not.</p>
+    </details>
+    <br>
+    <details>
+        <summary>what is the use of the background-position property?</summary>
+        <p>&rarr;The background-position property sets the starting position of a background image. Tip: By default, a
+            background-image is placed at the top-left corner of an element, and repeated both vertically and
+            horizontally.</p>
+    </details>
+    <br>
+    <details>
+        <summary>Which property controls the image scroll in the background?</summary>
+        <p>&rarr;The background-attachment property sets whether a background image scrolls with the rest of the page,
+            or is fixed.</p>
+    </details>
+    <br>
+    <details>
+        <summary>Why should background and color be used as separate properties?</summary>
+        <p>&rarr;There are two reasons behind this: It enhances the legibility of style sheets. The background property
+            is a complex property in CSS, and if it is combined with color, the complexity will further increase.</p>
+    </details>
+    <br>
+    <details>
+        <summary>How to center block elements using CSS1?</summary>
+        <p>&rarr;o centrally align the block elements, we can simply make use of the <center> tag. All the elements
+                within the <center> tag will be centrally aligned.</p>
+    </details>
+    <br>
+    <details>
+        <summary>How to maintain the CSS specifications?</summary>
+        <p>&rarr;The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME
+            type) text/css is registered for use with CSS by RFC 2318 (March 1998).</p>
+    </details>
+    <br>
+    <details>
+        <summary>What are the ways to integrate CSS as a web page?</summary>
+        <p>&rarr;CSS may be added to HTML in three different ways. To style a single HTML element on the page, use
+            Inline CSS in a style attribute. By adding CSS to the head section of our HTML document, we can embed an
+            internal stylesheet. We can also connect to an external stylesheet that separates our CSS from our HTML.</p>
+    </details>
+    <br>
+    <details>
+        <summary>What is embedded style sheets?</summary>
+        <p>&rarr;Embedded Stylesheet: It allows you to define styles for a particular HTML document as a whole in one
+            place. This is done by embedding the <style></style> tags containing the CSS properties in the head of your
+            document.</p>
+    </details>
+    <br>
+    <details>
+        <summary>What are the external style sheets?</summary>
+        <p>&rarr;An external style sheet is a separate CSS file that can be accessed by creating a link within the head
+            section of the webpage. Multiple webpages can use the same link to access the stylesheet. The link to an
+            external style sheet is placed within the head section of the page.</p>
+    </details>
+    <br>
+    <details>
+        <summary>What are the advantages and disadvantages of using external style sheets?</summary>
+        <p>&rarr;The advantages of External Style Sheets are as follows :
 
-        With the help of External Style Sheets, the styles of numerous documents can be organized from one single file.
-        In External Style Sheets, Classes can be made for use on numerous HTML element types in many forms of the site.
-        In complex contexts, Methods like selector and grouping can be implemented to apply styles.
-        The disadvantages of External Style Sheets are as follows :
-        
-        An extra download is essential to import style information for each file.
-        The execution of the file may be deferred till the external style sheet is loaded.
-        While implementing style sheets, we need to test Web pages with multiple browsers in order to check compatibility issues.</p>
-</details>
-<br>
-<details>
-    <summary>What is the meaning of the CSS selector?</summary>
-    <p>&rarr;It is a pattern of elements and other terms that tell the browser which HTML elements should be selected to have the CSS property values inside the rule applied to them.</p>
-</details>
-<br>
-<details>
-    <summary>What are the media types allowed by CSS?</summary>
-    <p>&rarr;Sr.No.	Value & Description
-        1.all:-<br>
-        Suitable for all devices.
-        <br>
-        2.aural:-<br>
-        Intended for speech synthesizers.
-        <br>
-        3.braille:-<br>
-        Intended for braille tactile feedback devices.
-        <br>
-        4.embossed:-<br>
-        Intended for paged braille printers.
-        <br>
-        5.handheld:-<br>
-        Intended for handheld devices (typically small screen, monochrome, limited bandwidth).
-        <br>
-        6.print:-<br>
-        Intended for paged, opaque material and for documents viewed on screen in print preview mode. Please consult the section on paged media.
-        <br>
-        7.projection:-<br>
-        Intended for projected presentations, for example projectors or print to transparencies. Please consult the section on paged media.
-        <br>
-        8.screen:-<br>
-        Intended primarily for color computer screens.
-        <br>
-        9.tty:-<br>
-        Intended for media using a fixed-pitch character grid, such as teletypes, terminals, or portable devices with limited display capabilities.
-        <br>
-        10.tv:-<br>
-        Intended for television-type devices.</p>
-</details>
-<br>
-<details>
-    <summary>What is the rule set?</summary>
-    <p>&rarr;A table of instructions used by a controlled interface to determine what data is allowable and how the data is handled between interconnected systems.</p>
-</details>
+            With the help of External Style Sheets, the styles of numerous documents can be organized from one single
+            file.
+            In External Style Sheets, Classes can be made for use on numerous HTML element types in many forms of the
+            site.
+            In complex contexts, Methods like selector and grouping can be implemented to apply styles.
+            The disadvantages of External Style Sheets are as follows :
+
+            An extra download is essential to import style information for each file.
+            The execution of the file may be deferred till the external style sheet is loaded.
+            While implementing style sheets, we need to test Web pages with multiple browsers in order to check
+            compatibility issues.</p>
+    </details>
+    <br>
+    <details>
+        <summary>What is the meaning of the CSS selector?</summary>
+        <p>&rarr;It is a pattern of elements and other terms that tell the browser which HTML elements should be
+            selected to have the CSS property values inside the rule applied to them.</p>
+    </details>
+    <br>
+    <details>
+        <summary>What are the media types allowed by CSS?</summary>
+        <p>&rarr;Sr.No. Value & Description
+            1.all:-<br>
+            Suitable for all devices.
+            <br>
+            2.aural:-<br>
+            Intended for speech synthesizers.
+            <br>
+            3.braille:-<br>
+            Intended for braille tactile feedback devices.
+            <br>
+            4.embossed:-<br>
+            Intended for paged braille printers.
+            <br>
+            5.handheld:-<br>
+            Intended for handheld devices (typically small screen, monochrome, limited bandwidth).
+            <br>
+            6.print:-<br>
+            Intended for paged, opaque material and for documents viewed on screen in print preview mode. Please consult
+            the section on paged media.
+            <br>
+            7.projection:-<br>
+            Intended for projected presentations, for example projectors or print to transparencies. Please consult the
+            section on paged media.
+            <br>
+            8.screen:-<br>
+            Intended primarily for color computer screens.
+            <br>
+            9.tty:-<br>
+            Intended for media using a fixed-pitch character grid, such as teletypes, terminals, or portable devices
+            with limited display capabilities.
+            <br>
+            10.tv:-<br>
+            Intended for television-type devices.
+        </p>
+    </details>
+    <br>
+    <details>
+        <summary>What is the rule set?</summary>
+        <p>&rarr;A table of instructions used by a controlled interface to determine what data is allowable and how the
+            data is handled between interconnected systems.</p>
+    </details>
 </body>
+
 </html>
