--- a/Assignment-2.html
+++ b/Assignment-2.html
@@ -28,9 +28,8 @@
         <summary>What are the disadvantages of CSS?</summary>
         <p>&rarr;(1)Cross-Browser Issues.<br>
             (2)Confusion Due to Its Many Levels.<br>
-            (3)Confusion Due to Its Many Levels.<br>
-            (4)Different Layout Display.<br>
-            (5)Vulnerability.
+            (3)Different Layout Display.<br>
+            (4)Vulnerability.
         </p>
     </details>
     <br>
@@ -102,9 +101,10 @@
     <br>
     <details>
         <summary>What are the ways to integrate CSS as a web page?</summary>
-        <p>&rarr;CSS may be added to HTML in three different ways. To style a single HTML element on the page, use
-            Inline CSS in a style attribute. By adding CSS to the head section of our HTML document, we can embed an
-            internal stylesheet. We can also connect to an external stylesheet that separates our CSS from our HTML.</p>
+        <p>&rarr;CSS may be added to HTML in three different ways.<br>
+            External CSS<br>
+            Internal CSS<br>
+            Inline CSS</p>
     </details>
     <br>
     <details>
