--- a/BOOTSTRAP_ASSIGNMENT/Boostrap_Assignment.html
+++ b/BOOTSTRAP_ASSIGNMENT/Boostrap_Assignment.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOOTSTRAP ASSIGNMENT</title>
     <style>
-        * {
+        body {
             background-color: pink;
             font-size: 20px;
         }
